--- a/res/layout/story_list_item.xml
+++ b/res/layout/story_list_item.xml
@@ -1,23 +1,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="10dp"
     >
     
-     <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="wrap_conent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:text="Placeholder"/>
-     
     <TextView
-        android:id="@+id/storyTextView"
-        android:layout_width="wrap_conent"
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_below="@+id/titleTextView"
-        android:text="Placeholder"/>
+        android:text="Placeholder title"
+        android:layout_centerHorizontal="true" />
     
+    <TextView
+        android:id="@+id/authorTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/titleTextView"
+        android:text="Placeholder author" 
+        />
+
 </RelativeLayout>
