--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,12 +3,14 @@
     android:id="@+id/myFrame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.literalstudios.sleepystories.MainActivity" >
 
- 
+ 	<fragment 
+ 	    android:id="@+id/listFragment"
+ 	    android:name="com.literalstudios.sleepystories.StoryListFragment"
+ 	    android:layout_width="fill_parent"
+ 	    android:layout_height="fill_parent"
+ 	    tools:layout="@layout/story_list_fragment"/>
+ 	    
 
 </FrameLayout>
